--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
-                
+
             <div class="destination" id="madrid">
                 <h2>Madrid</h2>
+
+            <div class="destination" id="rome">
+                <h2>Rome</h2>
             </div>
         </div>
     </div>
